--- a/Part 4/Section 03 - Project 1/project1_test.ipynb
+++ b/Part 4/Section 03 - Project 1/project1_test.ipynb
@@ -2,254 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Account:\n",
-    "    transaction_id = 0\n",
-    "    def __init__(self, name, balance):\n",
-    "        self.name = name\n",
-    "        self.balance = balance\n",
-    "    \n",
-    "    def withdraw(self, amount):\n",
-    "        self.balance -= amount\n",
-    "        Account.transaction_id += 1\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = Account(\"Jack\", 100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.withdraw(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.transaction_id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = Account(\"Jill\", 200)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b.transaction_id\n",
-    "b.withdraw(20)\n",
-    "b.transaction_id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import itertools\n",
-    "\n",
-    "a = itertools.count(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "next(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "itertools.count"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Account:\n",
-    "\n",
-    "    def __init__(self, first_name):\n",
-    "        self._first_name = first_name\n",
-    "        self.balance = 0\n",
-    "    \n",
-    "    @property\n",
-    "    def first_name(self):\n",
-    "        return self._first_name\n",
-    "    \n",
-    "    @first_name.setter\n",
-    "    def first_name(self, value):\n",
-    "        self._first_name = self.validate_name(value, \"First name\")\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def validate_name(value, field_title):\n",
-    "        if not isinstance(value, str):\n",
-    "            raise TypeError(f\"{field_title} must be a string\")\n",
-    "        if len(value.strip()) == 0:\n",
-    "            raise ValueError(f\"{field_title} cannot be empty\")\n",
-    "        return value.strip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = Account(\"Jack\")\n",
-    "# a.first_name = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.first_name = \"Jill\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Jack'"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a._first_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.balance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import numbers\n",
-    "from datetime import timedelta\n",
-    "import itertools\n",
+    "from datetime import timedelta, datetime\n",
+    "from collections import namedtuple\n",
+    "\n",
+    "        \n",
+    "Confirmation = namedtuple('Confirmation', 'account_number, transaction_code, transaction_id, time_utc, time')\n",
     "\n",
     "\n",
     "class Account:\n",
     "\n",
-    "    interest_rate: float = 0.005\n",
     "    transaction_counter = itertools.count(100)\n",
+    "    _interest_rate: float = 0.5\n",
+    "    _transaction_codes = {\n",
+    "        'deposit': 'D',\n",
+    "        'withdraw': 'W',\n",
+    "        'interest': 'I',\n",
+    "        'rejected': 'X'\n",
+    "    }\n",
     "\n",
     "    def __init__(self, account_number: int, first_name: str, last_name: str,\n",
-    "                timezone = None,  balance: float = 0):\n",
+    "                timezone: TimeZone | None = None,  initial_balance: float = 0):\n",
     "        self._account_number = account_number\n",
     "        self.first_name = first_name\n",
     "        self.last_name = last_name\n",
     "        if timezone is None:\n",
     "            timezone = TimeZone('UTC', 0, 0)\n",
     "        self.timezone = timezone\n",
-    "        self._balance = balance\n",
+    "        self._balance = initial_balance\n",
     "\n",
     "\n",
     "    @property\n",
@@ -277,6 +62,10 @@
     "        return f\"{self.first_name} {self.last_name}\"\n",
     "    \n",
     "    @property\n",
+    "    def balance(self):\n",
+    "        return self._balance\n",
+    "    \n",
+    "    @property\n",
     "    def timezone(self):\n",
     "        return self._timezone\n",
     "    \n",
@@ -285,10 +74,19 @@
     "        if not isinstance(value, TimeZone):\n",
     "            raise ValueError(\"Timezone must be a valid TimeZone object\")\n",
     "        self._timezone = value\n",
+    "\n",
+    "    @classmethod\n",
+    "    def get_interest_rate(cls):\n",
+    "        return cls._interest_rate\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def set_interest_rate(cls, value):\n",
+    "        if not isinstance(value, numbers.Real):\n",
+    "            raise ValueError(\"Interest rate must be a real number\")\n",
+    "        if value < 0:\n",
+    "            raise ValueError(\"Interest rate cannot be negative\")\n",
+    "        cls._interest_rate = value\n",
     "        \n",
-    "    @property\n",
-    "    def balance(self):\n",
-    "        return self._balance\n",
     "\n",
     "    @staticmethod\n",
     "    def validate_name(value, field_title):\n",
@@ -298,33 +96,31 @@
     "            raise ValueError(f\"{field_title} cannot be empty\")\n",
     "        return value.strip()\n",
     "    \n",
-    "    def withdraw(self, amount):\n",
-    "        self.balance = self.balance - amount\n",
-    "        transaction_id = next(Account.transaction_counter)\n",
-    "        return transaction_id\n",
+    "    def make_transaction(self):\n",
+    "        return self.generate_confirmation_code(\"dummy\")\n",
+    "        \n",
     "    \n",
-    "    def deposit(self, amount):\n",
-    "        self.balance = self.balance + amount \n",
-    "        transaction_id = next(Account.transaction_counter)\n",
-    "        return transaction_id\n",
+    "    def generate_confirmation_code(self, transaction_code: str):\n",
+    "        dt_str = datetime.utcnow().strftime(\"%Y%m%d%H%M%S\")\n",
+    "        return f\"{transaction_code}-{self.account_number}-{dt_str}-{next(Account.transaction_counter)}\"\n",
     "    \n",
-    "    # @property\n",
-    "    # def balance(self):\n",
-    "    #     return self.balance + self.calculate_interest()\n",
-    "\n",
-    "    def pay_interest(self):\n",
-    "        return self.balance * Account.monthly_interest_rate\n",
-    "    \n",
-    "    def parse_confirmation_code():\n",
-    "        ...\n",
-    "\n",
-    "    \n",
-    "    # def commit(self):\n",
-    "    #     \"\"\" \n",
-    "    #     - the account number, transaction code (D, W, etc), datetime (UTC format), date time (in whatever timezone is specified in te argument, but more human readable), the transaction ID\n",
-    "    #     - make it so it is a nicely structured object (so can use dotted notation to access these three attributes)\n",
-    "    #     - I purposefully made it so the desired timezone is passed as an argument. Can you figure out why? (hint: does this method require any information from any instance?)\n",
-    "    #     \"\"\"\n",
+    "    @staticmethod\n",
+    "    def parse_confirmation_code(confirmation_code: str, preferred_time_zone: TimeZone | None = None):\n",
+    "        parts = confirmation_code.split('-')\n",
+    "        if len(parts) != 4:\n",
+    "            raise ValueError(\"Invalid confirmation code\")\n",
+    "        transaction_code, account_number, raw_dt_utc, transaction_id = parts\n",
+    "        try:\n",
+    "            dt_utc = datetime.strptime(raw_dt_utc, \"%Y%m%d%H%M%S\")\n",
+    "        except ValueError as ex:\n",
+    "            raise ValueError(\"Invalid transaction datetime\") from ex\n",
+    "        if preferred_time_zone is None:\n",
+    "            preferred_time_zone = TimeZone('UTC', 0, 0)\n",
+    "        if not isinstance(preferred_time_zone, TimeZone):\n",
+    "            raise ValueError(\"Invalid TimeZone specified\")\n",
+    "        dt_preferred = dt_utc + preferred_time_zone.offset\n",
+    "        dt_preferred_str = f\"{dt_preferred.isoformat()} ({preferred_time_zone.name})\"\n",
+    "        return Confirmation(account_number, transaction_code, transaction_id, dt_utc.isoformat(), dt_preferred_str)\n",
     "\n",
     "\n",
     "class TimeZone:\n",
@@ -376,85 +172,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = Account('123', 'John', 'Smith')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TimeZone(name='UTC', offset_hours=0, offset_minutes=0)"
+       "'dummy-123-20230916173842-100'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = Account(123, \"Jack\", \"Smith\", balance=100)\n",
-    "a.timezone"
+    "a.make_transaction()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TimeZone(name='MST', offset_hours=-7, offset_minutes=0)"
+       "Confirmation(account_number='123', transaction_code='D', transaction_id='100', time_utc='2021-09-09T12:34:56', time='2021-09-09T12:34:56 (UTC)')"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.timezone = TimeZone('MST', -7, 0)\n",
-    "a.timezone"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.balance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "property 'balance' of 'Account' object has no setter",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32manhailing\\python-deepdive\\Part 4\\Section 03 - Project 1\\project1_test.ipynb Cell 19\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell://github%2B7b2276223a312c22726566223a7b2274797065223a342c226964223a22657865227d7d/anhailing/python-deepdive/Part%204/Section%2003%20-%20Project%201/project1_test.ipynb#X62sdnNjb2RlLXZmcw%3D%3D?line=0'>1</a>\u001b[0m a\u001b[39m.\u001b[39;49mbalance \u001b[39m=\u001b[39m \u001b[39m200\u001b[39m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: property 'balance' of 'Account' object has no setter"
-     ]
-    }
-   ],
-   "source": [
-    "a.balance = 200"
+    "a.parse_confirmation_code('D-123-20210909123456-100')"
    ]
   },
   {
