account class updated

--- a/Part 4/Section 03 - Project 1/project1_test.ipynb
+++ b/Part 4/Section 03 - Project 1/project1_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "    }\n",
     "\n",
     "    def __init__(self, account_number: int, first_name: str, last_name: str,\n",
-    "                timezone: TimeZone | None = None,  initial_balance: float = 0):\n",
+    "                timezone=None,  initial_balance: float = 0):\n",
     "        self._account_number = account_number\n",
     "        self.first_name = first_name\n",
     "        self.last_name = last_name\n",
@@ -86,8 +86,41 @@
     "        if value < 0:\n",
     "            raise ValueError(\"Interest rate cannot be negative\")\n",
     "        cls._interest_rate = value\n",
-    "        \n",
     "\n",
+    "    def deposit(self, value: float) -> Confirmation:\n",
+    "        Account.validate_real_number(value, 0.01)\n",
+    "        transaction_code = Account._transaction_codes['deposit']\n",
+    "        conf_code = self.generate_confirmation_code(transaction_code)\n",
+    "        self._balance += value\n",
+    "        return conf_code\n",
+    "    \n",
+    "    def withdraw(self, value: float) -> Confirmation:\n",
+    "        accepted = False\n",
+    "        Account.validate_real_number(value, 0.01)\n",
+    "        if self.balance - value < 0:\n",
+    "            transaction_code = Account._transaction_codes['rejected']\n",
+    "        else:\n",
+    "            transaction_code = Account._transaction_codes['withdraw']\n",
+    "            accepted = True\n",
+    "        conf_code = self.generate_confirmation_code(transaction_code)\n",
+    "        if accepted:\n",
+    "            self._balance -= value\n",
+    "        return conf_code\n",
+    "    \n",
+    "    def pay_interest(self) -> Confirmation:\n",
+    "        interest = self.balance * Account.get_interest_rate() / 100\n",
+    "        conf_code = self.generate_confirmation_code(Account._transaction_codes['interest'])\n",
+    "        self._balance += interest\n",
+    "        return conf_code\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def validate_real_number(value, min_value=None):\n",
+    "        if not isinstance(value, numbers.Real):\n",
+    "            raise ValueError(\"Value must be a real number\")\n",
+    "        if min_value is not None and value < min_value:\n",
+    "            raise ValueError(f\"Value must be at least {min_value}\")\n",
+    "        return value\n",
+    "        \n",
     "    @staticmethod\n",
     "    def validate_name(value, field_title):\n",
     "        if not isinstance(value, str):\n",
@@ -96,16 +129,12 @@
     "            raise ValueError(f\"{field_title} cannot be empty\")\n",
     "        return value.strip()\n",
     "    \n",
-    "    def make_transaction(self):\n",
-    "        return self.generate_confirmation_code(\"dummy\")\n",
-    "        \n",
-    "    \n",
     "    def generate_confirmation_code(self, transaction_code: str):\n",
     "        dt_str = datetime.utcnow().strftime(\"%Y%m%d%H%M%S\")\n",
     "        return f\"{transaction_code}-{self.account_number}-{dt_str}-{next(Account.transaction_counter)}\"\n",
     "    \n",
     "    @staticmethod\n",
-    "    def parse_confirmation_code(confirmation_code: str, preferred_time_zone: TimeZone | None = None):\n",
+    "    def parse_confirmation_code(confirmation_code: str, preferred_time_zone = None):\n",
     "        parts = confirmation_code.split('-')\n",
     "        if len(parts) != 4:\n",
     "            raise ValueError(\"Invalid confirmation code\")\n",
@@ -172,11 +201,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "a = Account('123', 'John', 'Smith')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D-123-20230917154514-100'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.deposit(0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'X-123-20230917154517-101'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.withdraw(60)"
    ]
   },
   {
