--- a/Part 4/Section 03 - Project 1/project1_test.ipynb
+++ b/Part 4/Section 03 - Project 1/project1_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
     "        if timezone is None:\n",
     "            timezone = TimeZone('UTC', 0, 0)\n",
     "        self.timezone = timezone\n",
-    "        self._balance = initial_balance\n",
+    "        self._balance = Account.validate_real_number(initial_balance, 0)\n",
     "\n",
     "\n",
     "    @property\n",
@@ -201,16 +201,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Value must be at least 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32manhailing\\python-deepdive\\Part 4\\Section 03 - Project 1\\project1_test.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell://github%2B7b2276223a312c22726566223a7b2274797065223a342c226964223a22657865227d7d/anhailing/python-deepdive/Part%204/Section%2003%20-%20Project%201/project1_test.ipynb#X12sdnNjb2RlLXZmcw%3D%3D?line=0'>1</a>\u001b[0m a \u001b[39m=\u001b[39m Account(\u001b[39m'\u001b[39;49m\u001b[39m123\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mJohn\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mSmith\u001b[39;49m\u001b[39m'\u001b[39;49m, initial_balance\u001b[39m=\u001b[39;49m\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m)\n",
+      "\u001b[1;32manhailing\\python-deepdive\\Part 4\\Section 03 - Project 1\\project1_test.ipynb Cell 2\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell://github%2B7b2276223a312c22726566223a7b2274797065223a342c226964223a22657865227d7d/anhailing/python-deepdive/Part%204/Section%2003%20-%20Project%201/project1_test.ipynb#X12sdnNjb2RlLXZmcw%3D%3D?line=26'>27</a>\u001b[0m     timezone \u001b[39m=\u001b[39m TimeZone(\u001b[39m'\u001b[39m\u001b[39mUTC\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell://github%2B7b2276223a312c22726566223a7b2274797065223a342c226964223a22657865227d7d/anhailing/python-deepdive/Part%204/Section%2003%20-%20Project%201/project1_test.ipynb#X12sdnNjb2RlLXZmcw%3D%3D?line=27'>28</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtimezone \u001b[39m=\u001b[39m timezone\n\u001b[1;32m---> <a href='vscode-notebook-cell://github%2B7b2276223a312c22726566223a7b2274797065223a342c226964223a22657865227d7d/anhailing/python-deepdive/Part%204/Section%2003%20-%20Project%201/project1_test.ipynb#X12sdnNjb2RlLXZmcw%3D%3D?line=28'>29</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_balance \u001b[39m=\u001b[39m Account\u001b[39m.\u001b[39;49mvalidate_real_number(initial_balance, \u001b[39m0\u001b[39;49m)\n",
+      "\u001b[1;32manhailing\\python-deepdive\\Part 4\\Section 03 - Project 1\\project1_test.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[0;32m    <a href='vscode-notebook-cell://github%2B7b2276223a312c22726566223a7b2274797065223a342c226964223a22657865227d7d/anhailing/python-deepdive/Part%204/Section%2003%20-%20Project%201/project1_test.ipynb#X12sdnNjb2RlLXZmcw%3D%3D?line=110'>111</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mValue must be a real number\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    <a href='vscode-notebook-cell://github%2B7b2276223a312c22726566223a7b2274797065223a342c226964223a22657865227d7d/anhailing/python-deepdive/Part%204/Section%2003%20-%20Project%201/project1_test.ipynb#X12sdnNjb2RlLXZmcw%3D%3D?line=111'>112</a>\u001b[0m \u001b[39mif\u001b[39;00m min_value \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m value \u001b[39m<\u001b[39m min_value:\n\u001b[1;32m--> <a href='vscode-notebook-cell://github%2B7b2276223a312c22726566223a7b2274797065223a342c226964223a22657865227d7d/anhailing/python-deepdive/Part%204/Section%2003%20-%20Project%201/project1_test.ipynb#X12sdnNjb2RlLXZmcw%3D%3D?line=112'>113</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mValue must be at least \u001b[39m\u001b[39m{\u001b[39;00mmin_value\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    <a href='vscode-notebook-cell://github%2B7b2276223a312c22726566223a7b2274797065223a342c226964223a22657865227d7d/anhailing/python-deepdive/Part%204/Section%2003%20-%20Project%201/project1_test.ipynb#X12sdnNjb2RlLXZmcw%3D%3D?line=113'>114</a>\u001b[0m \u001b[39mreturn\u001b[39;00m value\n",
+      "\u001b[1;31mValueError\u001b[0m: Value must be at least 0"
+     ]
+    }
+   ],
    "source": [
-    "a = Account('123', 'John', 'Smith')"
+    "a = Account('123', 'John', 'Smith', initial_balance=-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +233,7 @@
        "0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
